Alteração de layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
+    <div class = "container-intro">
     <header>
         <h1>Relógio</h1>
         <nav>
@@ -45,7 +46,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
                 
             </div>
-        </div>
+        </div> </div>
     </main>
    
     <section class="container">
@@ -79,8 +80,9 @@
                 <h1>Relógio Analógico Criativo</h1>
                 <p>Mostrador único com elementos artísticos. Marcadores únicos para horas e minutos. Perfeito para quem procura algo fora do convencional.</p>
               </section>
+             </div> 
     </section>
-    </div>
+    
     <footer>Lorem ipsum dolor ipsa.</footer>
 
 
