Alteração de background

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div> </div>
     </main>
-   
+   <div class="bg">
     <section class="container">
         <h1>Modelos de Relogio</h1>
 
@@ -82,7 +82,7 @@
               </section>
              </div> 
     </section>
-    
+    </div>
     <footer>Lorem ipsum dolor ipsa.</footer>
 
 
