Animação ao Scroll

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="imagens/relogio.jpg" alt="Relogio Prata">
 
             <h2 class="subtitulo">Vantagens</h2>
-        <div class="vantagem">
+        <div class="vantagem ">
             <div class="vantagem-itens">
                 <img src="imagens/rastreador.svg" alt="">
                 <h3>Rastreador</h3>
@@ -48,7 +48,7 @@
             </div>
         </div> </div>
     </main>
-   <div class="bg">
+   <div class="bg js-scroll">
     <section class="container">
         <h1>Modelos de Relogio</h1>
 
